test/test-cases/negative/const_errors.pas
Program const_errors(input, output);
Const
  b = 1;
  a = 3;
Begin
  read(b);
  for b := 1 to 3 do
    a := 4
End.
